@@ -105,6 +105,7 @@ vips_conversion_operation_init( void )
 {
 	extern GType vips_copy_get_type( void ); 
 	extern GType vips_tile_cache_get_type( void ); 
+	extern GType vips_cache_get_type( void ); 
 	extern GType vips_embed_get_type( void ); 
 	extern GType vips_flip_get_type( void ); 
 	extern GType vips_insert_get_type( void ); 
@@ -122,6 +123,7 @@ vips_conversion_operation_init( void )
 
 	vips_copy_get_type();
 	vips_tile_cache_get_type(); 
+	vips_cache_get_type(); 
 	vips_embed_get_type();
 	vips_flip_get_type();
 	vips_insert_get_type();
