@@ -105,7 +105,6 @@ G_DEFINE_BOXED_TYPE( VipsThing, vips_thing,
 	(GBoxedCopyFunc) vips_thing_copy, 
 	(GBoxedFreeFunc) vips_thing_free );
 
-
 /**
  * SECTION: VipsArea
  * @short_description: an area of memory
